# SC_Manager

./: .gitignore  AGENTS.md  CLAUDE.md  INSTALL.md  LICENSE  Makefile  OPTIMIZATION.md  README.md  connect_mysql.py  phase_diagram.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  sc_config.example.json  setup.py  tutorial_slowcontrol.ipynb
.claude/: settings.local.json
.claude/agents/: sc-data-reader.md
docs/: index.md  quickstart.md
docs/user_guide/: 04_data_caching.md  06_phase_diagram.md
example/: basic_usage.py  cache_demo.py  dash_phase_app.py  event_monitor.py  incremental.py
sc_reader/: __init__.py  align.py  argon_phase.py  cache.py  config.py  event.py  phase_diagram.py  reader.py  spec.py  visualizer.py
sc_reader/dashboard/: __init__.py  __main__.py  app.py  callbacks.py  config.py  helpers.py  layouts.py
scripts/: check_db.py  export_to_parquet.py  local_reader.py
tests/: test_reader_init.py  test_spec_autodetect.py
