[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sc-reader"
version = "1.3.0"
description = "A Python library for reading, analyzing, and visualizing slow control system data from MySQL"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "SC_Manager", email = "sc_manager@example.com"}
]
keywords = [
    "mysql",
    "data-analysis",
    "time-series",
    "slow-control",
    "monitoring",
    "scientific-computing"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Database",
]

dependencies = [
    "pymysql>=1.0.0,<2.0.0",
    "pandas>=1.3.0,<3.0.0",
    "matplotlib>=3.3.0,<4.0.0",
    "seaborn>=0.11.0,<1.0.0",
    "numpy>=1.20.0,<3.0.0",
    "sqlalchemy>=1.4.0,<3.0.0",
    "pyarrow>=10.0.0",
    "plotly>=5.0.0,<6.0.0",
    "kaleido>=0.2.1,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=8.5.0",
    "mkdocstrings[python]>=0.19.0",
]

[project.urls]
Homepage = "https://github.com/sc-manager/sc-reader"
Documentation = "https://github.com/sc-manager/sc-reader/tree/main/docs"
Repository = "https://github.com/sc-manager/sc-reader"
"Bug Tracker" = "https://github.com/sc-manager/sc-reader/issues"

[tool.setuptools]
packages = ["sc_reader"]

[tool.setuptools.package-data]
sc_reader = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=sc_reader --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
